@@ -355,27 +355,19 @@ table.wp-list-table .column-download_id,
 table.wp-list-table .column-version {
   width: 5em;
 }
-table.wp-list-table th.column-thumb span:first-child,
-table.wp-list-table th.column-download_count span:first-child,
-table.wp-list-table th.column-locked_download span:first-child,
-table.wp-list-table th.column-members_only span:first-child,
-table.wp-list-table th.column-redirect_only span:first-child,
-table.wp-list-table th.column-featured span:first-child {
-  float: none;
+table.wp-list-table th.column-thumb a > span:first-child,
+table.wp-list-table th.column-download_count a > span:first-child,
+table.wp-list-table th.column-locked_download a > span:first-child,
+table.wp-list-table th.column-members_only a > span:first-child,
+table.wp-list-table th.column-redirect_only a > span:first-child,
+table.wp-list-table th.column-featured a > span:first-child {
+  float: left;
   display: inline-block;
   width: 1em;
   height: 1em;
   line-height: 1em;
   padding: 2px 0 0 0;
   overflow: hidden;
-}
-table.wp-list-table th.column-thumb .sorting-indicator,
-table.wp-list-table th.column-download_count .sorting-indicator,
-table.wp-list-table th.column-locked_download .sorting-indicator,
-table.wp-list-table th.column-members_only .sorting-indicator,
-table.wp-list-table th.column-redirect_only .sorting-indicator,
-table.wp-list-table th.column-featured .sorting-indicator {
-  float: right;
 }
 table.wp-list-table th.column-thumb {
   width: 52px;
@@ -401,7 +393,7 @@ table.wp-list-table th.column-thumb span:first-child:before {
 table.wp-list-table th.column-download_count {
   width: 5em;
 }
-table.wp-list-table th.column-download_count span:first-child:before {
+table.wp-list-table th.column-download_count a > span:first-child:before {
   font-family: "dashicons" !important;
   speak: none;
   font-weight: normal;
@@ -422,8 +414,8 @@ table.wp-list-table th.column-locked_download,
 table.wp-list-table th.column-members_only {
   width: 3.5em;
 }
-table.wp-list-table th.column-locked_download span:first-child:before,
-table.wp-list-table th.column-members_only span:first-child:before {
+table.wp-list-table th.column-locked_download a > span:first-child:before,
+table.wp-list-table th.column-members_only a > span:first-child:before {
   font-family: "dashicons" !important;
   speak: none;
   font-weight: normal;
@@ -443,7 +435,7 @@ table.wp-list-table th.column-members_only span:first-child:before {
 table.wp-list-table th.column-redirect_only {
   width: 3.5em;
 }
-table.wp-list-table th.column-redirect_only span:first-child:before {
+table.wp-list-table th.column-redirect_only a > span:first-child:before {
   font-family: "dashicons" !important;
   speak: none;
   font-weight: normal;
@@ -463,7 +455,7 @@ table.wp-list-table th.column-redirect_only span:first-child:before {
 table.wp-list-table th.column-featured {
   width: 3.5em;
 }
-table.wp-list-table th.column-featured span:first-child:before {
+table.wp-list-table th.column-featured a > span:first-child:before {
   font-family: "dashicons" !important;
   speak: none;
   font-weight: normal;
@@ -1641,7 +1633,7 @@ table.wp-list-table .column-thumb img {
   justify-content: initial;
 }
 .dlm_download_page_download-monitor-reports #wpcontent .dlm-reports-block-summary ul li {
-  width: 12.5%;
+  width: 15%;
   padding: 24px;
   margin: 0;
   /*  overflow: hidden;*/
